# qmb-public

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  attention.py  cg.py  comb.py  learn.py  loss_function.py  naqs.py  networks.py  openfermion_to_sparse.cpp  openfermion_to_sparse.py  opt.py  pyproject.toml  setup.py  sr.py  test.cu  test.py  transformers_learn.py  transformers_opt.py  vmc.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker.yml  pre-commit.yml  wheels.yml
.woodpecker/: README.md  docker.yml  pre-commit.yml  wheels.yml
qmb/: __init__.py  __main__.py  _collection.cpp  _collection_cuda.cu  _hamiltonian.cpp  _hamiltonian.cu  _hamiltonian_cpu.cpp  _hamiltonian_cuda.cu  _openfermion.cu  attention.py  bitspack.py  chop_imag.py  common.py  crossmlp.py  cuda_limit.py  fcidump.py  free_fermion.py  from_json.py  guide.py  haar.py  hamiltonian.py  hubbard.py  imag.py  ising.py  iter.py  learn.py  legacy.py  lobpcg.py  losses.py  main.py  mlp.py  model_dict.py  naqs.py  openfermion.py  optimizer.py  peps.py  precompile.py  rbm.py  rldiag.py  rlim.py  (+6 more)
qmp/: Makefile  _binary_tree.hpp  _ising.cpp  _openfermion.cpp  common.py  ising.py  iter.py  learn.py  naqs.py  openfermion.py  vmc.py
tests/: collection_test.py  extension_test.py
