[build-system]
requires = ["setuptools~=69.5.1", "setuptools_scm~=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qmb"
dynamic = ["version"]
dependencies = [
  "numpy~=1.26.4",
  "scipy~=1.14.1",
  "torch~=2.5.1",
  "pybind11~=2.13.6",
  "ninja~=1.11.1.3",
  "tyro~=0.9.4",
  "openfermion~=1.6.1",
  "tensorboard~=2.18.0",
]
requires-python = "~=3.12,~=3.13"
authors = [{ name = "Hao Zhang", email = "hzhangxyz@outlook.com" }]
description = "Quantum Manybody Problem"
readme = "README.md"
license = {text = "GPLv3"}
keywords = ["quantum", "manybody", "quantum-chemistry", "quantum-simulation", "molecular-simulation", "algorithms", "simulation", "wave-function", "ground-state", "ansatz", "torch", "pytorch"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Environment :: GPU :: NVIDIA CUDA",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
  "yapf~=0.43.0",
  "pylint~=3.3.2",
  "mypy~=1.14.0",
  "pytest~=8.3.4",
  "pytest-cov~=6.0.0",
]

[project.urls]
Homepage = "https://github.com/USTC-KnowledgeComputingLab/qmb"
Documentation = "https://github.com/USTC-KnowledgeComputingLab/qmb"
Repository = "https://github.com/USTC-KnowledgeComputingLab/qmb.git"
Issues = "https://github.com/USTC-KnowledgeComputingLab/qmb/issues"

[project.scripts]
qmb = "qmb.__main__:main"

[tool.setuptools.packages.find]
include = ["qmb"]

[tool.setuptools_scm]
version_file = "qmb/_version.py"
version_scheme = "no-guess-dev"

[tool.yapf]
based_on_style = "google"
column_limit = 200

[tool.pylint]
max-line-length = 200
ignore-paths = ["qmb/_version.py"]
disable = ["duplicate-code"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=qmb"
